syntax = "proto3";

import "google/protobuf/empty.proto";

package thermostat;

option java_multiple_files = true;
option java_package = "org.stu.thermostat";
option java_outer_classname = "ThermostatProto";

service Thermostat{
  rpc activateThermostat (google.protobuf.Empty) returns (ThermostatOnStatus){}
  rpc deActivateThermostat (google.protobuf.Empty) returns (ThermostatOffStatus){}
  rpc triggerFan (google.protobuf.Empty) returns (FanStatus){}
  rpc shutdownFan (google.protobuf.Empty) returns (FanStatus){}
  rpc setFanMode (FanMode) returns (FanMode){}
  rpc increaseTemp (CurrentTemp) returns (CurrentTemp){}
  rpc decreaseTemp (CurrentTemp) returns (CurrentTemp){}
  rpc setShutDownTime (Hours) returns (Hours){}
}

message ThermostatOnStatus{
  string onStatus = 1;
}

message ThermostatOffStatus{
  string offStatus = 1;
}

message FanStatus{
  string status = 1;
}

message FanMode{
  string mode = 1;
}

message AllFanModes{
  repeated FanMode modes = 1;
}

message CurrentTemp{
  int32 temp = 1;
}

message Hours{
  int32 numHours = 1;
}